glib/tests/lifetime_compiletest/06-boxed-invariant.stderr
error: lifetime may not live long enough
  --> tests/lifetime_compiletest/06-boxed-invariant.rs:31:5
   |
30 | fn not_covariant<'a>(record: TestBoxedRecord<'static>) -> TestBoxedRecord<'a> {
   |                  -- lifetime `'a` defined here
31 |     record
   |     ^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of the type `TestBoxedRecord<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `TestBoxedRecord<'data>` is invariant over the parameter `'data`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
